# auto_close_window

./: .gitignore  README.md  cakc.ods  microphone.sim1  pwm-ping.simu  simul.sim1  simul.simu
3d/: closed-window-lock-plate.FCStd  closed-window-lock-plate.FCStd1  closed-window-lock-plate.stl  closed-window-lock-top-angle.stl  closed-window-lock-top-line.stl  closed-window-lock-top.FCStd  closed-window-lock-top.FCStd1  coil-bracket.stl  coil-buttom.stl  coil-middle.stl  coil-top.stl  coil.FCStd  indoor-hearhandle-bottom.FCStd  indoor-hearhandle-bottom.FCStd1  indoor-hearhandle-buttom.stl  indoor-hearhandle-top.FCStd  indoor-hearhandle-top.FCStd1  indoor-hearhandle-top.stl  magnet-emulator.FCStd  magnet-emulator.FCStd1  magnet-emulator.stl  mechanics-limit-switch-cup.stl  mechanics-limit-switch-lock.stl  mechanics-limit-switch.stl  mechanics-limiters.stl  mechanics-mm-buttom.stl  mechanics-mm-button.stl  mechanics-mm-top.stl  mechanics-plate-v2.stl  mechanics-plate.stl  mechanics-servo-hand.stl  mechanics-servo-holder.stl  mechanics-v2-hmhm-button.stl  mechanics-v2-hmhm-charger-port-cup.stl  mechanics-v2-hmhm-charger-port.stl  mechanics-v2-hmhm-down.stl  mechanics-v2-hmhm-glass.stl  mechanics-v2-hmhm-up.stl  mechanics-v2-microphone-air-ring.stl  mechanics-v2-mmmm-box-down.stl  (+82 more)
avr/: mega32
avr/sensor/: bmp280.ino  data_transfer.ino  encrypter.ino  filter.ino  gpio_logger.ino  (+5 more)
esp32/: .cproject  .project  sdkconfig.ci
schematics/: libraries
src/main_module/main/: CMakeLists.txt  Kconfig.projbuild  acw_main.c
src/main_module/main/charger/: charger_init.c  charger_init.h
src/main_module/main/common/: delay_timer.c  delay_timer.h  mqtt.c  mqtt.h  mqtt_healthcheck.c  mqtt_healthcheck.h  mqtt_ota.c  mqtt_ota.h  nvs_rw.c  nvs_rw.h  wifi.c  wifi.h  wifi_nvs.h
src/main_module/main/controller/: controller.c  controller.h  controller_args_def.h  controller_mqtt.c  controller_mqtt.h  controller_status_def.h
src/main_module/main/fm/: fm_command_address_def.h  fm_command_addresses.c  fm_command_addresses.h  fm_command_defs.h  fm_command_encoder.c  fm_command_encoder.h  fm_crypter.c  fm_crypter.h  fm_crypter_key.h  fm_receiver.c  fm_receiver.h  fm_sender.c  fm_sender.h
src/main_module/main/fm/crypto/: encrypter.c  encrypter.h  encrypter_secret.h
src/main_module/main/log/: log.h
src/main_module/main/stepper/: stepper_adc.c  stepper_adc.h  stepper_commands.h  stepper_commands_def.h  stepper_def.h  stepper_executor.c  stepper_executor.h  stepper_init.c  stepper_init.h  stepper_one_step.c  stepper_one_step.h
(+266 files in other folders)
