idf_component_register(SRCS "acw_main.c" 
                            "charger/charger_init.c" 
                            "stepper/stepper_init.c" 
                            "common/nvs_rw.c" 
                            "fm/fm_sender.c" 
                            "fm/fm_receiver.c" 
                            "fm/fm_command_encoder.c"
                            "fm/fm_crypter.c"
                            "controller/controller.c"
                    INCLUDE_DIRS "")
