idf_component_register(SRCS "acw_main.c" 
                            "charger/charger_init.c" 
                            "stepper/stepper_init.c" 
                            "common/nvs_rw.c"
                            "common/wifi.c"
                            "common/wifi_nvs.c"
                            "common/mqtt.c" 
                            "cjson/cjson_helper.c"
                            "fm/fm_sender.c" 
                            "fm/fm_receiver.c" 
                            "fm/fm_command_encoder.c"
                            "fm/fm_command_addresses.c"
                            "fm/crypto/encrypter.c"
                            "controller/controller.c"
                    INCLUDE_DIRS "")
